test(front): #2184 fixed home responsive on iphone
- Used scss witchcraft to try to patch this issue
- Hope it works


Former-commit-id: 653e5d49b2fd91f978ddc3ec166c1d8d3b2668e4

--- a/theme/2014/static/scss/base.scss
+++ b/theme/2014/static/scss/base.scss
@@ -255,12 +255,14 @@ a {
   }
 }
 
+//scss-lint:disable VendorPrefix
 .defcon {
   background-color: $fluid-dark-red;
   height: 50px;
   margin: 0 auto;
   padding-bottom: 10px;
   position: sticky;
+  position: -webkit-sticky;
   top: 0;
   width: 100%;
   z-index: 15;
@@ -271,7 +273,7 @@ a {
     text-align: center;
   }
 }
-
+//scss-lint:enable VendorPrefix
 
 .defconbtn {
   align-content: center;
